--- a/views/src/index.css
+++ b/views/src/index.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base{
+    :root {
+      --primary: #525252;
+      --secondary: #737373;
+    }
+    
+    * {
+      scrollbar-width: thin;
+      scrollbar-color: var(--secondary) var(--primary);
+    }
+    
+    /* Chrome, Edge, and Safari */
+    *::-webkit-scrollbar {
+      width: 15px;
+    }
+    
+    *::-webkit-scrollbar-track {
+      background: var(--primary);
+    }
+    
+    *::-webkit-scrollbar-thumb {
+      background-color: var(--secondary);
+      border-radius: 14px;
+      border: 3px solid var(--primary);
+    }
+}
